# dataviewer

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
config/: custom_gui_layout.ini  recent_files.txt
data_handler/: data_handler.py
demo/: demo.py
gui/: about_view.py  data_view.py  main_view.py  metadata_view.py  selector_view.py  sidebar_view.py  top_bar_view.py  topbar_view.py
